welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:46: error: Unmatched closing brace '}' ignored here
}
^PatternPicture:49: error: eof expected but '}' found.
}
^