welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
avance();
for (motif <- 1 to 2) {
setCouleurBrosse(Color.RED);
baisseBrosse();
leveBrosse();
avance();
setCouleurBrosse(Color.BLUE);
baisseBrosse();
leveBrosse();
avance();
gauche();
avance();
baisseBrosse();
leveBrosse();
avance();
setCouleurBrosse(Color.GREEN);
baisseBrosse();
leveBrosse();
avance();
gauche();
avance();
baisseBrosse();
leveBrosse();
avance();
setCouleurBrosse(Color.YELLOW);
baisseBrosse();
leveBrosse();
avance();
gauche();
avance();
baisseBrosse();
leveBrosse();
avance();
setCouleurBrosse(Color.RED);
baisseBrosse();
leveBrosse();
avance();
gauche();
avance();

}
}
}
}
